<resources>
    <string name="app_name">Cute Selfie</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <dimen name="drawer_drawable_padding">5dp</dimen>
    <dimen name="drawer_margin_left">15dp</dimen>
    <dimen name="drawer_textview_size">15sp</dimen>
    <string name="home">Home</string>
    <string name="about">About</string>
...
